--- a/api/assets/highlight.css
+++ b/api/assets/highlight.css
@@ -1,16 +1,16 @@
 :root {
-    --light-hl-0: #000000;
-    --dark-hl-0: #D4D4D4;
-    --light-hl-1: #AF00DB;
-    --dark-hl-1: #C586C0;
-    --light-hl-2: #001080;
-    --dark-hl-2: #9CDCFE;
-    --light-hl-3: #A31515;
-    --dark-hl-3: #CE9178;
-    --light-hl-4: #0000FF;
-    --dark-hl-4: #569CD6;
-    --light-hl-5: #795E26;
-    --dark-hl-5: #DCDCAA;
+    --light-hl-0: #795E26;
+    --dark-hl-0: #DCDCAA;
+    --light-hl-1: #000000;
+    --dark-hl-1: #D4D4D4;
+    --light-hl-2: #A31515;
+    --dark-hl-2: #CE9178;
+    --light-hl-3: #AF00DB;
+    --dark-hl-3: #C586C0;
+    --light-hl-4: #001080;
+    --dark-hl-4: #9CDCFE;
+    --light-hl-5: #0000FF;
+    --dark-hl-5: #569CD6;
     --light-hl-6: #008000;
     --dark-hl-6: #6A9955;
     --light-hl-7: #0070C1;
@@ -19,13 +19,13 @@
     --dark-hl-8: #808080;
     --light-hl-9: #267F99;
     --dark-hl-9: #4EC9B0;
-    --light-hl-10: #FF0000;
+    --light-hl-10: #E50000;
     --dark-hl-10: #9CDCFE;
     --light-hl-11: #000000FF;
     --dark-hl-11: #D4D4D4;
     --light-hl-12: #800000;
     --dark-hl-12: #569CD6;
-    --light-code-background: #F5F5F5;
+    --light-code-background: #FFFFFF;
     --dark-code-background: #1E1E1E;
 }
 
@@ -63,7 +63,7 @@
     --code-background: var(--dark-code-background);
 } }
 
-body.light {
+:root[data-theme='light'] {
     --hl-0: var(--light-hl-0);
     --hl-1: var(--light-hl-1);
     --hl-2: var(--light-hl-2);
@@ -80,7 +80,7 @@ body.light {
     --code-background: var(--light-code-background);
 }
 
-body.dark {
+:root[data-theme='dark'] {
     --hl-0: var(--dark-hl-0);
     --hl-1: var(--dark-hl-1);
     --hl-2: var(--dark-hl-2);
